--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
       <div class="max-w-3xl mx-auto text-center">
         <h3 class="text-3xl font-bold text-gray-800 mb-6">About CLUEFORIT</h3>
         <p class="text-lg leading-relaxed text-gray-600 mb-8">Founded on the principles of technology and innovation, CLUEFORIT is your go-to partner for comprehensive manage services and digital business solutions. We empower businesses with robust IT systems, secure networking, and bespoke applications. Our experts ensure seamless operations, from infrastructure setup to advanced digital tools, all while maintaining affordability and reliability.</p>
-        <!--
-        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/d0c9138d-9d91-40de-8939-fccf710e0a45.png" alt="Abstract digital network illustration showing interconnected nodes and flowing data streams in various shades of blue, representing CLUEFORIT's integrated IT services and connectivity solutions" class="mx-auto rounded-lg shadow-lg w-full card-hover">
-       -->
+        
+        <!-- <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/d0c9138d-9d91-40de-8939-fccf710e0a45.png" alt="Abstract digital network illustration showing interconnected nodes and flowing data streams in various shades of blue, representing CLUEFORIT's integrated IT services and connectivity solutions" class="mx-auto rounded-lg shadow-lg w-full card-hover"> -->
       </div>
     </div>
   </section>
@@ -227,4 +226,5 @@
 </html>
 </content>
 </create_file>
+
 
