--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
         </form>
         <div class="mt-6 text-center">
           <p><strong>Phone:</strong> 08972325030</p>
-          <p><strong>Email:</strong> clueforit@gmail.com</p>
-          <p><strong>Address:</strong> Tangerang Raya Gading Serpong Business Center</p>
+          <p><strong>Email:</strong> henry.suryaman@gmail.com</p>
+          <p><strong>Address:</strong> Tangerang Raya - Gading Serpong Business Center- Indonesia</p>
         </div>
       </div>
     </div>
@@ -199,7 +199,7 @@
   <!-- Footer -->
   <footer class="bg-blue-600 text-white py-6">
     <div class="container mx-auto px-6 text-center">
-      <p>© 2023 CLUEFORIT. All rights reserved. Innovating with technology for a digital future.</p>
+      <p>© 2020 CLUEFORIT. All rights reserved. Innovating with technology for a digital future.</p>
     </div>
   </footer>
 
@@ -226,5 +226,6 @@
 </html>
 </content>
 </create_file>
+
 
 
