--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="mt-6 text-center">
           <p><strong>Phone:</strong> 08972325030</p>
           <p><strong>Email:</strong> henry.suryaman@gmail.com</p>
-          <p><strong>Address:</strong> Gading Serpong Business Center- Tangerang, Indonesia-15820</p>
+          <p><strong>Address:</strong> Gading Serpong - Tangerang, Indonesia-15820</p>
         </div>
       </div>
     </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
