--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h3 class="text-3xl font-bold text-center text-gray-800 mb-12">Our Services & Products</h3>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/f9bb7dcc-9f73-472b-a741-902781b17f07.png" alt="Detailed architectural diagram of IT infrastructure components including servers, routers, and cloud networks in a sleek blue and white design" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/infrastrukturit.png" alt="Detailed architectural diagram of IT infrastructure components including servers, routers, and cloud networks in a sleek blue and white design" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">IT Infrastructure</h4>
           <p>Scalable and secure setups for your business needs.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
