--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <p>Complete installation for a warehouse, ensuring 24/7 security.</p>
         </div>
         <div class="bg-gray-100 p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/017a7f29-395b-41f2-8f33-6552906a6d94.png" alt="Pharmacy management app workflow diagram showing automated inventory and prescription tracking in neutral gray" class="mb-4 rounded">
+          <img src="https://clueforit.vercel.app/apotik.png" alt="Pharmacy management app workflow diagram showing automated inventory and prescription tracking in neutral gray" class="mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Apotek Management App</h4>
           <p>Streamlined operations for multiple pharmacies, improving efficiency.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
