--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <p>Streamlined operations for multiple pharmacies, improving efficiency.</p>
         </div>
         <div class="bg-gray-100 p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/17267d98-11f0-4747-8c60-77278d7a1393.png" alt="Car showroom app mockup with vehicle comparison tool, booking system, and virtual tours in green and white" class="mb-4 rounded">
+          <img src="https://clueforit.vercel.app/showroom.png" alt="Car showroom app mockup with vehicle comparison tool, booking system, and virtual tours in green and white" class="mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Mobil Showroom Digital Platform</h4>
           <p>Innovative app increasing showroom conversions by 50%.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
