--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <h3 class="text-3xl font-bold text-center text-gray-800 mb-12">Our Portfolio</h3>
       <div class="portfolio-grid">
         <div class="bg-gray-100 p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/e5b6c8fe-8eba-4887-8ce0-5002d8e393dd.png" alt="Before-and-after screenshot of IT infrastructure upgrade project showing improved server configurations and network stability visualized in blue and white" class="mb-4 rounded">
+          <img src="https://clueforit.vercel.app/infrait.png" alt="Before-and-after screenshot of IT infrastructure upgrade project showing improved server configurations and network stability visualized in blue and white" class="mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">IT Infrastructure Upgrade</h4>
           <p>Enhanced scalability for a local business, reducing downtime by 40%.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
