--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <p>Advanced surveillance systems for safety.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/34083e93-d159-4080-82a6-3cc96abaedb0.png" alt="Digital attendance machine interface displaying timeclock and user verification in neutral gray tones" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/absensi.png" alt="Digital attendance machine interface displaying timeclock and user verification in neutral gray tones" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Mesin Absensi</h4>
           <p>Efficient attendance tracking solutions.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
