--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <p>Interactive apps for car sales showrooms.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/f4a91112-fb6b-4ded-a560-dafc495b3da9.png" alt="Computer network diagram with routers, switches, and cable layouts in olive green and white" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/lan.png" alt="Computer network diagram with routers, switches, and cable layouts in olive green and white" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Jaringan Komputer</h4>
           <p>Reliable networking setups and maintenance.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
