--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <p>Scalable and secure setups for your business needs.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/72d44ce7-0e4c-44ac-848d-a31bc1853d38.png" alt="Modern web application interface mockup with responsive design, dashboards, and interactive elements in orange and dark theme" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/appweb.png" alt="Modern web application interface mockup with responsive design, dashboards, and interactive elements in orange and dark theme" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Web Applications</h4>
           <p>Custom web apps to streamline your operations.</p>
         </div>
@@ -226,6 +226,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
