--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p>Efficient attendance tracking solutions.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/a55186cc-a437-4961-9b06-ac48b7c76f40.png" alt="Pharmacy application screenshot showing inventory, prescriptions, and billing in green and white" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/kasir.jpg" alt="Pharmacy application screenshot showing inventory, prescriptions, and billing in green and white" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Aplikasi Apotik</h4>
           <p>Tailored apps for pharmacy management.</p>
         </div>
@@ -230,6 +230,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
