--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <p>Tailored apps for pharmacy management.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/d2c23a4c-56f1-48f1-b17a-28e614a4fec2.png" alt="Car showroom application UI with vehicle listings, search filters, and 3D models in dark red and white" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/showroom.jpg" alt="Car showroom application UI with vehicle listings, search filters, and 3D models in dark red and white" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Aplikasi Showroom Mobil</h4>
           <p>Interactive apps for car sales showrooms.</p>
         </div>
@@ -230,6 +230,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
