--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
           <p>Efficient attendance tracking solutions.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://clueforit.vercel.app/kasir.jpg" alt="Pharmacy application screenshot showing inventory, prescriptions, and billing in green and white" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/kasir.png" alt="Pharmacy application screenshot showing inventory, prescriptions, and billing in green and white" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Aplikasi Apotik</h4>
           <p>Tailored apps for pharmacy management.</p>
         </div>
         <div class="bg-white p-6 rounded-lg shadow-md card-hover">
-          <img src="https://clueforit.vercel.app/showroom.jpg" alt="Car showroom application UI with vehicle listings, search filters, and 3D models in dark red and white" class="mx-auto mb-4 rounded">
+          <img src="https://clueforit.vercel.app/showroom.png" alt="Car showroom application UI with vehicle listings, search filters, and 3D models in dark red and white" class="mx-auto mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">Aplikasi Showroom Mobil</h4>
           <p>Interactive apps for car sales showrooms.</p>
         </div>
@@ -148,7 +148,7 @@
           <p>Custom solution boosting online sales by 60% for a retail client.</p>
         </div>
         <div class="bg-gray-100 p-6 rounded-lg shadow-md card-hover">
-          <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/22731ec5-8dd4-4bd2-b75e-14b036e499d6.png" alt="Surveillance system installation blueprint with camera placements and monitoring dashboard in dark blue and white" class="mb-4 rounded">
+          <img src="https://clueforit.vercel.app/cctv.png" alt="Surveillance system installation blueprint with camera placements and monitoring dashboard in dark blue and white" class="mb-4 rounded">
           <h4 class="text-xl font-semibold mb-3">CCTV Security Setup</h4>
           <p>Complete installation for a warehouse, ensuring 24/7 security.</p>
         </div>
@@ -230,6 +230,7 @@
 </html>
 </content>
 </create_file>
+
 
 
 
