--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@ function findBestResponse(message) {
                                 <div class="text-xs font-bold">CEO</div>
                             </div>
                         </div>
-                        <h4 class="font-bold text-gray-900 mb-1 morph-text">Andi Wijaya</h4>
+                        <h4 class="font-bold text-gray-900 mb-1 morph-text">Henry Suryaman</h4>
                         <p class="text-sm text-gray-600 mb-2">Chief Executive Officer</p>
                         <div class="text-xs text-blue-600 bg-blue-50 px-2 py-1 rounded-full inline-block">
                             10+ Years Experience
