--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@ function findBestResponse(message) {
                             10+ Years Experience
                         </div>
                         <div class="mt-3 text-xs text-gray-500">
-                            🏆 Microsoft MVP<br>
+                            🏆 Most Value Profesional<br>
                             🎓 Master IT Management
                         </div>
                     </div>
