--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                 <div class="bg-gradient-to-r from-blue-50 to-purple-50 rounded-2xl p-8 border border-blue-100">
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Jelajahi Lebih Banyak Artikel</h3>
                     <p class="text-gray-600 mb-6">Temukan insights mendalam tentang teknologi, tips implementasi, dan tren industri terbaru</p>
-                    <a href="blog.html" target="_blank" rel="noopener noreferrer" class="morph-button gradient-bg text-white px-8 py-4 font-semibold inline-block text-center">
+                    <a href="blog.html" rel="noopener noreferrer" class="morph-button gradient-bg text-white px-8 py-4 font-semibold inline-block text-center">
                         Kunjungi Artikel Lengkap
                     </a>
                 </div>
