--- a/index.html
+++ b/index.html
@@ -262,6 +262,19 @@
         </div>
     </div>
 
+    <!-- Company Branding Bar - Always Visible -->
+    <div class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white px-3 py-3 border-b border-blue-800">
+        <div class="flex items-center justify-center space-x-3">
+            <div class="w-8 h-8 bg-white bg-opacity-20 rounded-lg flex items-center justify-center backdrop-blur-sm">
+                <span class="text-white font-bold text-sm">C</span>
+            </div>
+            <div class="text-center">
+                <div class="font-bold text-sm">Clueforit</div>
+                <div class="text-xs text-blue-100">Edutech & Technology Resource Center</div>
+            </div>
+        </div>
+    </div>
+
     <div class="flex h-screen relative">
         <!-- Mobile Sidebar Overlay -->
         <div id="sidebarOverlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 md:hidden hidden"></div>
@@ -598,109 +611,110 @@
         <div class="sm:hidden">Clueforit © 2025</div>
     </div>
 
-    <!-- Footer Section -->
-    <footer class="bg-gradient-to-r from-blue-900 to-blue-800 text-white">
-        <div class="max-w-7xl mx-auto px-4 py-12">
-            <!-- Main Footer Content -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
-                <!-- Company Info -->
-                <div class="lg:col-span-2">
-                    <div class="flex items-center space-x-3 mb-4">
-                        <div class="w-12 h-12 bg-white rounded-lg flex items-center justify-center">
-                            <span class="text-blue-600 font-bold text-xl">C</span>
-                        </div>
-                        <div>
-                            <h3 class="text-2xl font-bold">Clueforit</h3>
-                            <p class="text-blue-200 text-sm">Edutech & Technology Resource Center</p>
-                        </div>
-                    </div>
-                    <div class="mb-6">
-                        <h4 class="text-xl font-semibold text-blue-100 mb-2">"Memberdayakan Masa Depan Digital Anda"</h4>
-                        <p class="text-blue-200 text-sm leading-relaxed">
-                            Di Clueforit, kami tidak hanya mengelola IT Anda - kami mentransformasi bisnis Anda. Dengan solusi terdepan dan dukungan yang tak tergoyahkan, kami mengubah tantangan teknologi menjadi keunggulan kompetitif.
-                        </p>
-                    </div>
-                    <div class="flex space-x-4">
-                        <a href="#" class="w-10 h-10 bg-blue-700 hover:bg-blue-600 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm">📧</span>
-                        </a>
-                        <a href="#" class="w-10 h-10 bg-blue-700 hover:bg-blue-600 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm">💼</span>
-                        </a>
-                        <a href="#" class="w-10 h-10 bg-blue-700 hover:bg-blue-600 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm">🐦</span>
-                        </a>
-                        <a href="#" class="w-10 h-10 bg-blue-700 hover:bg-blue-600 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm">📱</span>
-                        </a>
+    <!-- Footer Section - Notebook/Document Style -->
+    <footer class="bg-white border-t-2 border-gray-300 mt-8">
+        <!-- Horizontal Rule like in documents -->
+        <div class="border-t border-gray-400 mx-8"></div>
+        
+        <!-- Footnote Style Content -->
+        <div class="px-8 py-6 bg-gradient-to-b from-gray-50 to-white">
+            <!-- Document Header -->
+            <div class="text-center mb-6 pb-4 border-b border-gray-200">
+                <h3 class="text-lg font-serif text-gray-800 mb-2">Clueforit Technology Resource Center</h3>
+                <p class="text-sm text-gray-600 italic">Edutech & Technology Solutions - Established 2025</p>
+            </div>
+
+            <!-- Footnote References -->
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-6 text-sm">
+                <!-- Company References -->
+                <div class="space-y-3">
+                    <h4 class="font-serif font-semibold text-gray-800 border-b border-gray-300 pb-1">Referensi Perusahaan</h4>
+                    <div class="space-y-2 text-xs leading-relaxed">
+                        <p><sup>1</sup> <a href="#" onclick="navigateToPath('about')" class="text-blue-600 hover:underline">Tentang Clueforit</a> - Profil lengkap perusahaan dan sejarah</p>
+                        <p><sup>2</sup> <a href="#" onclick="navigateToPath('about')" class="text-blue-600 hover:underline">Misi & Visi</a> - Komitmen kami terhadap inovasi teknologi</p>
+                        <p><sup>3</sup> <a href="#" onclick="navigateToPath('careers')" class="text-blue-600 hover:underline">Karir</a> - Bergabunglah dengan tim profesional kami</p>
+                        <p><sup>4</sup> Tim Ahli - Lebih dari 50+ profesional bersertifikat</p>
                     </div>
                 </div>
 
-                <!-- Services -->
-                <div>
-                    <h4 class="text-lg font-semibold mb-4 text-blue-100">Layanan Kami</h4>
-                    <ul class="space-y-2 text-sm">
-                        <li><a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('services')">Layanan IT Terkelola</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('services')">Solusi Cloud</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('services')">Keamanan Siber</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('services')">Bisnis Digital</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('case-studies')">Studi Kasus</a></li>
-                    </ul>
+                <!-- Service References -->
+                <div class="space-y-3">
+                    <h4 class="font-serif font-semibold text-gray-800 border-b border-gray-300 pb-1">Referensi Layanan</h4>
+                    <div class="space-y-2 text-xs leading-relaxed">
+                        <p><sup>5</sup> <a href="#" onclick="navigateToPath('services')" class="text-blue-600 hover:underline">IT Managed Services</a> - Layanan terkelola 24/7</p>
+                        <p><sup>6</sup> <a href="#" onclick="navigateToPath('services')" class="text-blue-600 hover:underline">Cloud Solutions</a> - Migrasi dan optimasi cloud</p>
+                        <p><sup>7</sup> <a href="#" onclick="navigateToPath('services')" class="text-blue-600 hover:underline">Cybersecurity</a> - Perlindungan keamanan siber</p>
+                        <p><sup>8</sup> <a href="#" onclick="navigateToPath('services')" class="text-blue-600 hover:underline">Digital Transformation</a> - Transformasi bisnis digital</p>
+                        <p><sup>9</sup> <a href="#" onclick="navigateToPath('case-studies')" class="text-blue-600 hover:underline">Case Studies</a> - Bukti kesuksesan implementasi</p>
+                    </div>
                 </div>
 
-                <!-- Contact Info -->
-                <div>
-                    <h4 class="text-lg font-semibold mb-4 text-blue-100">Hubungi Kami</h4>
-                    <div class="space-y-3 text-sm">
-                        <div class="flex items-center space-x-2">
-                            <span class="text-blue-300">📧</span>
-                            <span class="text-blue-200">henry.suryaman@gmail.com</span>
-                        </div>
-                        <div class="flex items-center space-x-2">
-                            <span class="text-blue-300">📞</span>
-                            <span class="text-blue-200">+62 897 232 5030</span>
-                        </div>
-                        <div class="flex items-center space-x-2">
-                            <span class="text-blue-300">📍</span>
-                            <span class="text-blue-200">Gading Serpong<br>Tangerang, Indonesia</span>
-                        </div>
-                        <div class="flex items-center space-x-2">
-                            <span class="text-blue-300">🕒</span>
-                            <span class="text-blue-200">Sen-Jum: 8AM-6PM EST</span>
-                        </div>
+                <!-- Contact References -->
+                <div class="space-y-3">
+                    <h4 class="font-serif font-semibold text-gray-800 border-b border-gray-300 pb-1">Informasi Kontak</h4>
+                    <div class="space-y-2 text-xs leading-relaxed">
+                        <p><sup>10</sup> Email: <a href="mailto:henry.suryaman@gmail.com" class="text-blue-600 hover:underline">henry.suryaman@gmail.com</a></p>
+                        <p><sup>11</sup> Telepon: <a href="tel:+6289723250300" class="text-blue-600 hover:underline">+62 897 232 5030</a></p>
+                        <p><sup>12</sup> Alamat: Gading Serpong, Tangerang, Indonesia</p>
+                        <p><sup>13</sup> <a href="#" onclick="navigateToPath('contact')" class="text-blue-600 hover:underline">Jam Operasional</a> - Sen-Jum: 8AM-6PM EST</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Bottom Footer -->
-            <div class="border-t border-blue-700 pt-6">
-                <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-                    <div class="text-center md:text-left">
-                        <p class="text-blue-200 text-sm">
-                            © 2025 Clueforit. Semua hak dilindungi. | 
-                            <span class="text-blue-100 font-medium">Memberdayakan Masa Depan Digital Anda</span>
-                        </p>
+            <!-- Document Statistics -->
+            <div class="bg-gray-50 border border-gray-200 rounded p-4 mb-4">
+                <h5 class="font-serif font-semibold text-gray-800 mb-3 text-sm">Statistik Dokumen & Sistem</h5>
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-xs text-gray-600">
+                    <div class="text-center">
+                        <div class="font-semibold text-gray-800">99.9%</div>
+                        <div>System Uptime</div>
                     </div>
-                    <div class="flex space-x-6 text-sm">
-                        <a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('about')">Kebijakan Privasi</a>
-                        <a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('about')">Syarat Layanan</a>
-                        <a href="#" class="text-blue-200 hover:text-white transition-colors cursor-pointer" onclick="navigateToPath('contact')">Dukungan</a>
+                    <div class="text-center">
+                        <div class="font-semibold text-gray-800">24/7</div>
+                        <div>Technical Support</div>
+                    </div>
+                    <div class="text-center">
+                        <div class="font-semibold text-gray-800">10+</div>
+                        <div>Years Experience</div>
+                    </div>
+                    <div class="text-center">
+                        <div class="font-semibold text-gray-800">500+</div>
+                        <div>Clients Served</div>
                     </div>
                 </div>
             </div>
 
-            <!-- Call to Action Banner -->
-            <div class="mt-8 bg-gradient-to-r from-green-600 to-green-500 rounded-lg p-6 text-center">
-                <h4 class="text-xl font-bold mb-2">Ready to Transform Your Business?</h4>
-                <p class="text-green-100 mb-4">Join hundreds of satisfied clients who trust Clueforit with their digital transformation.</p>
-                <div class="flex flex-col sm:flex-row gap-3 justify-center">
-                    <button onclick="navigateToPath('contact')" class="bg-white text-green-600 hover:bg-green-50 px-6 py-2 rounded-lg font-medium transition-colors">
-                        Get Free Consultation
+            <!-- Action Buttons in Document Style -->
+            <div class="text-center mb-4">
+                <div class="inline-flex space-x-4 text-xs">
+                    <button onclick="navigateToPath('contact')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow-sm transition-colors">
+                        📞 Konsultasi Gratis
                     </button>
-                    <button onclick="navigateToPath('services')" class="border-2 border-white text-white hover:bg-white hover:text-green-600 px-6 py-2 rounded-lg font-medium transition-colors">
-                        Explore Services
+                    <button onclick="navigateToPath('services')" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded shadow-sm transition-colors">
+                        📋 Lihat Layanan
+                    </button>
+                    <button onclick="navigateToPath('case-studies')" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded shadow-sm transition-colors">
+                        📊 Studi Kasus
                     </button>
                 </div>
+            </div>
+
+            <!-- Document Footer -->
+            <div class="border-t border-gray-300 pt-4 text-center">
+                <div class="text-xs text-gray-500 space-y-1">
+                    <p class="font-serif">© 2025 Clueforit Technology Resource Center. All rights reserved.</p>
+                    <p class="italic">"Memberdayakan Masa Depan Digital Anda melalui Inovasi Teknologi Terdepan"</p>
+                    <div class="flex items-center justify-center space-x-2 mt-2">
+                        <div class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
+                        <span class="text-green-600 font-medium">Sistem Online & Siap Melayani</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Document Metadata -->
+            <div class="mt-4 pt-3 border-t border-gray-200 text-xs text-gray-400 text-center">
+                <p>Document ID: CLUE-2025-MAIN | Last Updated: January 2025 | Version: 1.0</p>
+                <p>Classification: Public | Distribution: Unlimited | Format: Interactive Web Document</p>
             </div>
         </div>
     </footer>
@@ -1663,5 +1677,5 @@
             });
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'987d7b71b567fda3',t:'MTc1OTMzNzY3MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'987d95aa4381fe18',t:'MTc1OTMzODc0My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
