--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                     <div class="space-y-4">
                         <div class="flex items-center morph-hover">
                             <div class="morph-icon text-2xl mr-4">📧</div>
-                            <span class="morph-text text-gray-700">realboxofme@gmail.com</span>
+                            <span class="morph-text text-gray-700">henry.suryaman@gmail.com</span>
                         </div>
                         <div class="flex items-center morph-hover">
                             <div class="morph-icon text-2xl mr-4">💬</div>
@@ -985,7 +985,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4 morph-text">Kontak</h4>
                     <ul class="space-y-2">
-                        <li class="text-gray-400">📧 realboxofme@gmail.com</li>
+                        <li class="text-gray-400">📧 henry.suryaman@gmail.com</li>
                         <li class="text-gray-400">💬 0897 232 5030</li>
                         <li class="text-gray-400">📍 Gading Serpong, Tangerang</li>
                     </ul>
@@ -1084,7 +1084,7 @@
                 } else if (message.includes('portfolio')) {
                     responseText = 'Portfolio kami mencakup 50+ sistem informasi sekolah, 25+ ERP enterprise, aplikasi mobile banking dengan 100K+ users, 15+ sistem rumah sakit, dan platform e-commerce dengan 500+ merchants. Semua proyek menggunakan teknologi terdepan.';
                 } else if (message.includes('kontak')) {
-                    responseText = 'Anda bisa menghubungi kami melalui email: realboxofme@gmail.com, WhatsApp: 0897 232 5030, atau kunjungi kantor kami di Gading Serpong, Tangerang. Tim support kami siap membantu 24/7!';
+                    responseText = 'Anda bisa menghubungi kami melalui email: henry.suryaman@gmail.com, WhatsApp: 0897 232 5030, atau kunjungi kantor kami di Gading Serpong, Tangerang. Tim support kami siap membantu 24/7!';
                 } else {
                     responseText = 'Terima kasih atas pertanyaan Anda! Tim ahli kami akan segera menghubungi Anda untuk memberikan konsultasi yang lebih detail sesuai kebutuhan bisnis Anda.';
                 }
